--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
   },
   "dependencies": {
     "express": "^4.16.2",
-    "socket.io": "^2.0.4",
+    "prop-types": "*",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
+    "socket.io": "^2.0.4",
+    "ws": "^3.2.0"
   }
 }
